--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -1,32 +1,56 @@
 {% extends 'main.html' %} {% block content %}
-<h1>{{room.name}}</h1>
-
-<!-- displays room description -->
-<p>{{room.description}}</p>
-
-<!-- to output the comments -->
-<div class="comment-wrapper">
-  <h3>Conversation</h3>
-  <hr />
-
-  <!-- displays all the messages of a room -->
-  {% for message in room_messages %}
+<!-- style tag for displaying Participants at the right hand side -->
+<style>
+  .room-container {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+  }
+</style>
+<div class="room-container">
   <div>
-    <!-- "@{{message.user}} {{message.created|timesince}} ago" this displays -> "@kumar 2 weeks, 3 days ago" -->
-    <small>@{{message.user}} {{message.created|timesince}} ago</small>
-    <!-- displays the actual message -->
-    <p>{{message.body}}</p>
-    <hr />
-  </div>
-  {% endfor %}
-</div>
+    <h1>{{room.name}}</h1>
 
-<!-- Form to write comment -->
-{% if request.user.is_authenticated %}
-<div class="comment-form">
-  <form method="POST" action="">
-    {% csrf_token %}
-    <input type="text" name="body" placeholder="Write your message here" />
-  </form>
+    <!-- displays room description -->
+    <p>{{room.description}}</p>
+
+    <!-- to output the comments -->
+    <div class="comment-wrapper">
+      <h3>Conversation</h3>
+      <hr />
+
+      <!-- displays all the messages of a room -->
+      {% for message in room_messages %}
+      <div>
+        <!-- "@{{message.user}} {{message.created|timesince}} ago" this displays -> "@kumar 2 weeks, 3 days ago" -->
+        <small>@{{message.user}} {{message.created|timesince}} ago</small>
+        <!-- displays the actual message -->
+        <p>{{message.body}}</p>
+        <hr />
+      </div>
+      {% endfor %}
+    </div>
+
+    <!-- Form to write comment -->
+    {% if request.user.is_authenticated %}
+    <div class="comment-form">
+      <form method="POST" action="">
+        {% csrf_token %}
+        <input type="text" name="body" placeholder="Write your message here" />
+      </form>
+    </div>
+    {% endif %}
+  </div>
+
+  <!-- container for displaying Participants -->
+  <div>
+    <h3>Participants</h3>
+    <hr />
+    {% for user in participants %}
+    <div>
+      <p>@{{user.username}}</p>
+    </div>
+    {% endfor %}
+  </div>
+  <!-- -------------------------------------- -->
 </div>
-{% endif %} {% endblock %}
+{% endblock %}
