--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -21,6 +21,11 @@
       <!-- displays all the messages of a room -->
       {% for message in room_messages %}
       <div>
+        <!-- clickable to delete the comment -->
+        <!-- This only allows the one who made comment to view the Delete button -->
+        {% if request.user == message.user %}
+        <a href="{% url 'delete-message' message.id %}">Delete</a>
+        {% endif %}
         <!-- "@{{message.user}} {{message.created|timesince}} ago" this displays -> "@kumar 2 weeks, 3 days ago" -->
         <small>@{{message.user}} {{message.created|timesince}} ago</small>
         <!-- displays the actual message -->
