--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -6,7 +6,7 @@
 <style>
   .home-container {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 3fr 1fr;
   }
 </style>
 
@@ -62,6 +62,24 @@
       {% endfor %}
     </div>
   </div>
+
+  <!-- container for "Recent Activity" ------------------------>
+  <div>
+    <h3>Recent Activity</h3>
+    <hr />
+    {% for message in room_messages %}
+    <div>
+      <small>@{{message.user}} {{message.created|timesince}} ago</small>
+      <small>replied to {{message.room}}</small>
+      <p>{{message}}</p>
+      <!-- This only allows the one who made comment to view the Delete button -->
+      {% if request.user == message.user %}
+      <a href="{% url 'delete-message' message.id %}">Delete</a>
+      {% endif %}
+    </div>
+    {% endfor %}
+  </div>
+  <!--------------------------------------------------------->
 </div>
 
 {% endblock content %}
