--- a/templates/main.html
+++ b/templates/main.html
@@ -3,15 +3,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StudyBud</title>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="{% static 'styles/main.css' %}"
-    />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
+    <title>StudyBuddy</title>
   </head>
+
   <body>
     {% include 'navbar.html' %} {% if messages %}
 
@@ -22,5 +20,7 @@
     </ul>
 
     {% endif %} {% block content %} {% endblock %}
+
+    <script src="{% static 'js/script.js' %}"></script>
   </body>
 </html>
