--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -1,26 +1,47 @@
 {% extends 'main.html' %} {% block content %}
-<h1>{{user.username}}</h1>
+  <main class="profile-page layout layout--3">
+    <div class="container">
+      <!-- Topics Start -->
+     <div>{% include 'base/topics_component.html' %}</div>
+      <!-- Topics End -->
 
-<style>
-  .profile-container {
-    display: grid;
-    /* it creates three columns */
-    grid-template-columns: 1fr 3fr 1fr;
-  }
-</style>
+      <!-- Room List Start -->
+      <div class="roomList">
+        <div class="profile">
+          <div class="profile__avatar">
+            <div class="avatar avatar--large active">
+              <img src="https://randomuser.me/api/portraits/men/11.jpg" />
+            </div>
+          </div>
+          <div class="profile__info">
+            <h3>{{user.username}}</h3>
+            <p>@{{user.username}}</p>
+            <a href="edit-user.html" class="btn btn--main btn--pill">Edit Profile</a>
+          </div>
+          <div class="profile__about">
+            <h3>About</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur illo tenetur
+              facilis sunt nemo debitis quisquam hic atque aut? Ducimus alias placeat optio
+              accusamus repudiandae quis ab ex exercitationem rem?
+            </p>
+          </div>
+        </div>
 
-<!-- main container -->
-<div class="profile-container">
-  <!-- Three divs for three different columns -->
+        <div class="roomList__header">
+          <div>
+            <h2>Study Rooms Hosted by dennis_ivy</a>
+            </h2>
+          </div>
+        </div>
 
-  <!-- container for 'Browse Topics' -->
-  <div>{% include 'base/topics_component.html' %}</div>
+        {% include 'base/feed_component.html' %}
+      </div>
+      <!-- Room List End -->
 
-  <!-- container for 'activity feed' -->
-  <div>{% include 'base/feed_component.html' %}</div>
-
-  <!-- container for 'Recent Activity' -->
-  <div>{% include 'base/activity_component.html' %}</div>
-</div>
-
+      <!-- Activities Start -->
+      {% include 'base/activity_component.html' %}
+      <!-- Activities End -->
+    </div>
+  </main>
 {% endblock content %}
