--- a/base/templates/base/feed_component.html
+++ b/base/templates/base/feed_component.html
@@ -6,7 +6,8 @@
       class="roomListRoom__author"
     >
       <div class="avatar avatar--small">
-        <img src="https://randomuser.me/api/portraits/women/11.jpg" />
+        <!-- renders our uploaded picture -->
+        <img src="{{room.host.avatar.url}}" />
       </div>
       <span>@{{room.host.username}}</span>
     </a>
