--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -14,12 +14,12 @@
         <form class="form" action="" method="POST">
           {% csrf_token %}
           <div class="form__group form__group">
-            <label for="room_name">Username</label>
+            <label for="room_name">Email</label>
             <input
               id="username"
-              name="username"
+              name="email"
               type="text"
-              placeholder="Enter your username"
+              placeholder="Enter your email"
             />
           </div>
           <div class="form__group">
