--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -9,11 +9,13 @@
         href="{% url 'user-profile' message.user.id %}"
         class="roomListRoom__author"
       >
-        <div class="avatar avatar--small">
+        <div
+          class="avatar avatar--small{% if message.user == request.user %} active{% endif %}"
+        >
           <img src="{{message.user.avatar.url}}" />
         </div>
         <p>
-          @{{message.user}}
+          @{{message.user.username}}
           <span>{{message.created|timesince}} ago</span>
         </p>
       </a>
