--- a/base/templates/base/feed_component.html
+++ b/base/templates/base/feed_component.html
@@ -5,7 +5,9 @@
       href="{% url 'user-profile' room.host.id %}"
       class="roomListRoom__author"
     >
-      <div class="avatar avatar--small">
+      <div
+        class="avatar avatar--small{% if room.host == request.user %} active{% endif %}"
+      >
         <!-- renders our uploaded picture -->
         <img src="{{room.host.avatar.url}}" />
       </div>
