--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -81,7 +81,9 @@
               href="{% url 'user-profile' room.host.id %}"
               class="room__author"
             >
-              <div class="avatar avatar--small">
+              <div
+                class="avatar avatar--small{% if room.host == request.user %} active{% endif %}"
+              >
                 <img src="{{room.host.avatar.url}}" />
               </div>
               <span>@{{room.host.username}}</span>
@@ -105,7 +107,9 @@
                     href="{% url 'user-profile' message.user.id %}"
                     class="thread__authorInfo"
                   >
-                    <div class="avatar avatar--small">
+                    <div
+                      class="avatar avatar--small{% if message.user == request.user %} active{% endif %}"
+                    >
                       <img src="{{message.user.avatar.url}}" />
                     </div>
                     <span>@{{message.user.username}}</span>
@@ -157,8 +161,10 @@
       <div class="participants__list scroll">
         {% for user in participants %}
         <a href="{% url 'user-profile' user.id %}" class="participant">
-          <div class="avatar avatar--medium">
-            <img src="https://randomuser.me/api/portraits/men/37.jpg" />
+          <div
+            class="avatar avatar--medium{% if user == request.user %} active{% endif %}"
+          >
+            <img src="{{user.avatar.url}}" />
           </div>
           <p>
             {{user.username}}
