--- a/templates/main.html
+++ b/templates/main.html
@@ -11,15 +11,20 @@
   </head>
 
   <body>
-    {% include 'navbar.html' %} {% if messages %}
-
-    <ul class="messages">
+    {% include 'navbar.html' %} 
+    
+    {% if messages %}
+    <div class="messages-container">
       {% for message in messages %}
-      <li>{{ message }}</li>
+      <div class="alert alert--{{ message.tags }}" role="alert">
+        <span class="alert__message">{{ message }}</span>
+        <button class="alert__close" aria-label="Close">&times;</button>
+      </div>
       {% endfor %}
-    </ul>
-
-    {% endif %} {% block content %} {% endblock %}
+    </div>
+    {% endif %} 
+    
+    {% block content %} {% endblock %}
 
     <script src="{% static 'js/script.js' %}"></script>
   </body>
