--- a/base/templates/base/feed_component.html
+++ b/base/templates/base/feed_component.html
@@ -46,7 +46,9 @@
       {{room.participants.all.count}} Joined
     </a>
     {% if request.user.is_authenticated %} {% if request.user == room.host %}
-    <p class="roomListRoom__topic">{{room.topic.name}}</p>
+    <p class="roomListRoom__topic" style="font-size: 1.4rem;">
+      {{room.topic.name}}
+    </p>
     {% elif request.user in room.participants.all %}
     <p class="roomListRoom__topic">Joined</p>
     {% else %}
@@ -59,13 +61,15 @@
       <button
         type="submit"
         class="roomListRoom__topic btn btn--main btn--pill"
-        style="padding: 0.5rem 1rem; font-size: 0.875rem; cursor: pointer; border: none;"
+        style="padding: 1rem 2rem; font-size: 1.4rem; cursor: pointer; border: none;"
       >
         Join Room
       </button>
     </form>
     {% endif %} {% else %}
-    <p class="roomListRoom__topic">{{room.topic.name}}</p>
+    <p class="roomListRoom__topic" style="font-size: 1.4rem;">
+      {{room.topic.name}}
+    </p>
     {% endif %}
   </div>
 </div>
